force-app/src/objects/TR1__BHLI_LinkedinMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Criteria_To_Exclude_Candidate__c</fullName>
        <description>Criteria (API name of checkbox field) to exclude a candidate from sync process. The criteria is used if a client is not GDPR compliant.</description>
        <inlineHelpText>Criteria (API name of checkbox field) to exclude a candidate from sync process. The criteria is used if a client is not GDPR compliant.</inlineHelpText>
        <label>Criteria To Exclude Candidate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Direction__c</fullName>
        <label>Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce to LinkedIn</fullName>
                    <default>true</default>
                    <label>Salesforce to LinkedIn</label>
                </value>
                <value>
                    <fullName>LinkedIn to Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__FieldMapping__c</fullName>
        <defaultValue>(&quot;{}&quot;)</defaultValue>
        <label>Field Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__GDPRMandatoryField__c</fullName>
        <description>API Name of field to select records for syncing candidate when GDPR is turned ON.</description>
        <inlineHelpText>API Name of field to select records for syncing candidate when GDPR is turned ON.</inlineHelpText>
        <label>GDPR Mandatory Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedInObject__c</fullName>
        <label>LinkedIn Target Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate</fullName>
                    <default>true</default>
                    <label>Candidate</label>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>InMail Stub Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__RecordType__c</fullName>
        <label>Salesforce Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SalesforceObject__c</fullName>
        <label>Salesforce Source Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Linkedin Mapping(deprecated)</label>
    <pluralLabel>Linkedin Mapping</pluralLabel>
</CustomObject>